Fixed spacing in links

--- a/css/base.css
+++ b/css/base.css
@@ -45,7 +45,6 @@ header {
 
 header a {
     color: #000000;
-    margin-right: 20px;
     text-decoration: none; 
 }
 
@@ -115,8 +114,8 @@ footer {
 }
 
 .inline {
-    margin: none; 
-    padding: none;
+    margin: 0px; 
+    padding: 0px;
 }
 
 /* More general things at the top and more specific on the bottom */
